tests/support/validation/invalid/duplicate_block_on_service_id/blocks.blk
BLK;    B24-7;   4680526;6      ;arbor ;0534a;matpn ;0550a;ashmt ;1029a;arbor ;1045a;    ;    ;        ;016;;
BLK;    B24-7;   4680600;6      ;arbor ;1029a;ashmt ;1045a;ashmt ;1150a;arbor ;1206p;    ;    ;        ;016;;
